--- a/index.html
+++ b/index.html
@@ -199,16 +199,16 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/jdez23/Cycles_App'"
               >
                 Github
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 View Details
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
@@ -223,7 +223,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/jdez23/cycles-website'"
+                onclick="location.href='https://github.com/jdez23/cycles-website-JSX'"
               >
                 Github (React)
               </button>
